--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,16 @@ numpy==1.24.2
 scipy==1.10.0
 pandas==1.5.3
 
+# Database Interaction
+sqlalchemy==2.0.0
+
 # Web scraping/APIs
 requests==2.31.0
 beautifulsoup4==4.11.2
 
 # Visualization
 matplotlib==3.7.0
+seaborn==0.12.2
 plotnine==0.10.1 # Python version of ggplot2
 networkx>=2
 
@@ -16,6 +20,12 @@ networkx>=2
 ipykernel==6.21.2
 jupyterlab==3.6.1
 
+# Machine Learning
+scikit-learn==1.2.1
+xgboost==1.7.4   # gradient boosting model for regression/classification
+
+# Statistical Modeling
+statsmodels==0.13.2 
 
 # Your custom packages
 ./src/python/
